# raytracing

./: .gitignore  Cargo.toml  README.md  image.ppm  run.sh
crates/raytracing/: Cargo.toml
crates/renderer/: Cargo.toml
crates/renderer/src/: controller.rs  lib.rs  state.rs
shaders/: shader.wgsl
src/: camera.rs  color.rs  eventloop.rs  hit.rs  interval.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs  state.rs  texture.rs  utils.rs  vec3.rs  vertex.rs
